# shuang-editor

./: .gitignore  CLAUDE.md  README.md
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.css  App.tsx  Editor.tsx  Settings.tsx  ai.ts  api.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs
app/src/components/: FolderTree.tsx  StatusBar.tsx  TitleBar.tsx
app/src/extensions/: ghostFormat.ts  livePreview.ts
app/src/i18n/: en.ts  index.tsx  zh.ts
docs/: FINAL-PLAN.md  full-product-plan.md  mvp-plan.md
